--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,12 @@ language:
 before_script:
   - sudo easy_install bashtest
   - sudo chmod +x ./diskhog.sh
-  - sudo fallocate -l 250M ./250M.{sql,txt}
-  - sudo fallocate -l 50M ./50M.{sql,txt}
+  - sudo mkdir ./sql
+  - sudo mkdir ./txt
+  - sudo fallocate -l 250M ./sql/250M.sql
+  - sudo fallocate -l 250M ./txt/250M.txt
+  - sudo fallocate -l 50M ./sql/50M.sql
+  - sudo fallocate -l 50M ./txt/50M.txt
   - sudo ./diskhog.sh --fastest 50
   - sudo ./diskhog.sh --faster 50
   - sudo ./diskhog.sh --fast 250
