--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ language:
 before_script:
   - sudo easy_install bashtest
   - sudo chmod +x ./diskhog.sh
+  - sudo apt-get install locate
   - sudo mkdir ./sql
   - sudo mkdir ./txt
   - sudo fallocate -l 250M ./sql/250M.sql
