--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_script:
   - sudo fallocate -l 250M ./txt/250M.txt
   - sudo fallocate -l 50M ./sql/50M.sql
   - sudo fallocate -l 50M ./txt/50M.txt
+  - sudo stat /var/lib/mlocate/mlocate.db
   - sudo ./diskhog.sh --fastest 50
   - sudo ./diskhog.sh --faster 50
   - sudo ./diskhog.sh --fast 250
