--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_script:
   - sudo easy_install bashtest
   - sudo chmod +x ./diskhog.sh
   - sudo apt-get install locate
+  - sudo strace locate "" 2>&1 | egrep -o "/(.*/){1,}.*\.db" | head -n 1
   - sudo mkdir ./sql
   - sudo mkdir ./txt
   - sudo fallocate -l 250M ./sql/250M.sql
